deployments/eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lancedb-service
  namespace: lancedb-test
  labels:
    app: lancedb
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app: lancedb
