deployments/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lancedb-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: lancedb-test
spec:
  defaultBackend:
    service:
      name: lancedb-service
      port:
        number: 80
  tls:
    - hosts:
        - www.itaap.philips.com
      # secretName: itaap-tls-secret
  rules:
    - host: www.itaap.philips.com
      http:
        paths:
          - path: /lancedb_test/v1/*
            pathType: Prefix
            backend:
              service:
                name: lancedb-service
                port:
                  number: 80
